--- a/contacto.html
+++ b/contacto.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Correo: ulisesjossue8@gmail.com</h1>
+    <p>Instructora</p>
 </body>
 <script src="app.js"></script>
 </html>
